setup makefile to run tf

--- a/kubernetes/Makefile
+++ b/kubernetes/Makefile
@@ -1,5 +1,4 @@
-TERRAFORM=./terraform
-
+TERRAFORM=terraform -chdir=terraform
 
 init:
 	$(TERRAFORM) init
@@ -8,4 +7,7 @@ plan:
 	$(TERRAFORM) plan
 
 apply:
-	$(TERRAFORM) apply -auto-approve
+	$(TERRAFORM) apply -auto-approve \
+		-var-file=terraform.tfvars
+
+tf_run: init plan apply
