--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,10 +1,17 @@
 version: '3'
 
 includes:
-  vpn: "network/vpn/Taskfile.yml"
-  k8s: "kubernetes/Taskfile.yml"
+  kubernetes:
+    taskfile: kubernetes/Taskfile.yml
+
+dotenv: ['./kubernetes/.env']
 
 tasks:
   help:
     silent: true
     cmds: [ "task -l" ]
+
+  zip_repo:
+    cmds:
+      - echo "Zipping repository..."
+      - zip -r repository.zip . -x ".task/*" "*.tfstate.*" "packages/soa_agent/.venv/*" "*/terraform/.terraform/*" ".git/*" "**/.env" "**/.envrc"
