--- a/kubernetes/clusters/mlops/patches/kubelet.yaml
+++ b/kubernetes/clusters/mlops/patches/kubelet.yaml
@@ -3,6 +3,11 @@ machine:
   kubelet:
     extraArgs:
       rotate-server-certificates: true
-    nodeIP:
-      validSubnets:
-        - 192.168.86.0/24
+    extraMounts:
+      - destination: /var/mnt
+        type: bind
+        source: /var/mnt
+        options:
+          - bind
+          - rshared
+          - rw
