--- a/kubernetes/clusters/mlops/patches/master/api-access.yaml
+++ b/kubernetes/clusters/mlops/patches/master/api-access.yaml
@@ -4,6 +4,8 @@ machine:
     kubernetesTalosAPIAccess:
       enabled: true
       allowedRoles:
+        - os:reader
         - os:admin
       allowedKubernetesNamespaces:
         - system-upgrade
+        - default
