--- a/kubernetes/clusters/mlops/patches/master/api-access.yaml
+++ b/kubernetes/clusters/mlops/patches/master/api-access.yaml
@@ -7,5 +7,6 @@ machine:
         - os:reader
         - os:admin
       allowedKubernetesNamespaces:
+        - kube-system
         - system-upgrade
         - default
