--- a/kubernetes/Makefile
+++ b/kubernetes/Makefile
@@ -1,4 +1,4 @@
-TERRAFORM=terraform -chdir=terraform
+TERRAFORM=tofu -chdir=terraform
 
 include_env_vars:
 	@[ -f .env ] && set -a && . ./.env && set +a
@@ -14,3 +14,6 @@ apply:
 		-var-file=terraform.tfvars
 
 tf_run: include_env_vars init plan apply
+
+tf_destroy:
+	$(TERRAFORM) destroy -auto-approve
