--- a/kubernetes/Makefile
+++ b/kubernetes/Makefile
@@ -1,4 +1,5 @@
 TERRAFORM=tofu -chdir=terraform
+TALOSCONFIG=./generated/talosconfig
 
 include_env_vars:
 	@[ -f .env ] && set -a && . ./.env && set +a
@@ -19,4 +20,14 @@ tf_destroy:
 	$(TERRAFORM) destroy -auto-approve
 
 helmfile_apply:
-	helmfile apply --skip-diff-on-install --suppress-diff
+	helmfile apply --skip-diff-on-install --suppress-diff .
+
+clean:
+	rm -rf .task
+	rm -rf terraform/.terraform
+	rm -rf terraform/terraform.tfstate
+	rm -rf terraform/terraform.tfstate.backup
+	rm -rf terraform/.terraform.lock.hcl
+
+reboot-node:
+	talosctl reboot --nodes $(NODE)
