--- a/.sops.yaml
+++ b/.sops.yaml
@@ -2,3 +2,6 @@ creation_rules:
   - path_regex: kubernetes/*
     encrypted_regex: "^(data|stringData)$"
     kms: "arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28"
+  - path_regex: apps/*
+    encrypted_regex: "^(data|stringData)$"
+    kms: "arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28"
