--- a/kubernetes/defaults.yaml
+++ b/kubernetes/defaults.yaml
@@ -1,10 +1,7 @@
 ---
-environments:
-  default:
-
 helmDefaults:
   wait: true
   waitForJobs: true
   timeout: 600
-  recreatePods: true
+  recreatePods: false
   force: true
