--- a/kubernetes/apps/gitops/argocd/kustomization.yaml
+++ b/kubernetes/apps/gitops/argocd/kustomization.yaml
@@ -1,8 +1,7 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kube-system
+namespace: argocd
 resources:
-  - ip-pool.yaml
-  - announcement.yaml
   - gateway.yaml
+  # - route.yaml
