--- a/kubernetes/helmfile.d/02-gitops.gotmpl.yaml
+++ b/kubernetes/helmfile.d/02-gitops.gotmpl.yaml
@@ -1,7 +1,6 @@
 ---
 bases:
   - ../defaults.yaml
-  - ../environment.yaml
 
 repositories:
   - name: argo-cd
@@ -15,3 +14,11 @@ releases:
     createNamespace: true
     values:
       - ../apps/gitops/argocd/values.yaml.gotmpl
+    hooks:
+      - events: ["postsync"]
+        showlogs: true
+        command: "bash"
+        args:
+          - -c
+          - |
+            kustomize build --enable-exec ../apps/gitops/argocd | kubectl apply -f -
