--- a/kubernetes/Taskfile.yml
+++ b/kubernetes/Taskfile.yml
@@ -5,20 +5,6 @@ includes:
     taskfile: ".taskfiles/talos/Taskfile.yaml"
 
 tasks:
-  generate_tf_variables:
-    dir: kubernetes
-    cmds:
-      - |
-        echo "Generating terraform.tfvars from .env file..."
-        if [ -f .env ]; then
-          awk -F= '/^[^#]+/ {print $1 " = " $2}' .env > terraform/terraform.tfvars
-        else
-          echo "No .env file found. Skipping terraform.tfvars generation."
-        fi
-    silent: true
-    sources:
-      - .env
-
   provision-mlops-cluster:
     dir: kubernetes
     cmds:
@@ -26,14 +12,13 @@ tasks:
         if [ -f ../.envrc ]; then
           source ../.envrc
         fi
-      - task: generate_tf_variables
       - make tf_run
 
   bootstrap-mlops-cluster:
     dir: kubernetes
     cmds:
+      - make helmfile_lock
       - make helmfile_apply
-      - kubectl create namespace automation
 
   destroy-mlops-cluster:
     dir: kubernetes
